syntax = "proto3";

message Empty {}

message Network {
    string id = 1;
    string name = 2;
    string ownerID = 3;
    string status = 4;
    string IPv4 = 5;
    string dhcp = 6;
    string ipForward = 7;
}

message Networks {
    repeated Network networks = 1;
}

message Message {
    string message = 1;
}

service NetworkService {
    rpc createNetwork(Network) returns (Message) {}
    rpc getAllNetworks(Empty) returns (Networks) {}
    rpc deleteNetworkByID(Message) returns (Message) {}
    rpc changeNetworkStatus(Message) returns (Message) {}
}